--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="text-center">
                 <h3 class="section-subheading text-muted">Czy potrzebujesz profesjonalnego czyszczenia tapicerek? Chcesz, aby serwis przyszedł prosto do Twoich drzwi? Takie usługi nasza firma może zapewnić Tobie już dziś. Nie zwlekaj, tylko skontaktuj się z nami i zarezerwuj dogodny termin, a my zajmiemy się resztą i spełnimy Twoje wymagania.</h3>
                     <h2 class="section-heading text-uppercase">O NAS</h2>
-                    <h3 class="section-subheading">Nasza firma MOBILNIE_UPRANE specjalizuje się w profesjonalnych usługach czyszczenia szerokiej gamy tkanin tapicerskich. Czyścimy dywany, sofy, kanapy, krzesła, tapicerki samochodowe przy użyciu najnowszych metod i technologii.</h3>
+                    <h4 class='mb-5 mt-5'>Nasza firma <span style='color:#fed136 ;'>MOBILNIE_UPRANE</span> specjalizuje się w profesjonalnych usługach czyszczenia szerokiej gamy tkanin tapicerskich. Czyścimy dywany, sofy, kanapy, krzesła, tapicerki samochodowe przy użyciu najnowszych metod i technologii.</h3>
                 </div>
             </div>
             <div class="page-section bg-primary mb-5 pt-5 pb-5" id="about">
@@ -155,7 +155,7 @@
                             <div class="card-body card-body-bg">
                                
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li><h2 class="card-title pricing-card-title">komplet foteli od 80zł</h2></li>
+                                <li><h2 class="card-title pricing-card-title">Komplet foteli od 80zł</h2></li>
                             </ul>
                             </div>
                         </div>
@@ -171,10 +171,10 @@
                             <div class="card-body card-body-bg">
                                
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li><h2 class="card-title pricing-card-title">krzesło od 10zł</h2></li>
-                                <li><h2 class="card-title pricing-card-title">fotel od 30zł</h2></li>
-                                <li><h2 class="card-title pricing-card-title">kanapa od 50zł</h2></li>
-                                <li><h2 class="card-title pricing-card-title">rogówka od 120zł</h2></li>
+                                <li><h2 class="card-title pricing-card-title">Krzesło od 10zł</h2></li>
+                                <li><h2 class="card-title pricing-card-title">Fotel od 30zł</h2></li>
+                                <li><h2 class="card-title pricing-card-title">Kanapa od 50zł</h2></li>
+                                <li><h2 class="card-title pricing-card-title">Rogówka od 120zł</h2></li>
                             </ul>
                             </div>
                         </div>
@@ -187,9 +187,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <img class="img-fluid pb-4" src="img/logo_kontakt.webp" alt="" />
-                        <h2 class="mt-0">Zadzwoń swój dywan na czyszczenie</h2>
+                        <h2 class="mt-0">Zadzwoń i umów swój dywan na czyszczenie</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Jesteśmy dumni, że możemy zapewnić satysfakcję klienta i doskonałe usługi na terenie Warszawy i okolic.</p>
                     </div>
                 </div>
                 <div class="row">
