--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Mobilne pranie dywanów, tapicerek meblowych oraz samochodowych. Pranie prowadzimy na terenie Warszawy iokolic" />
         <meta name="author" content="Wiktor Zachar" />
+        <!--FACEBOOK-->
+        <meta property="og:image" content="http://mobilnieuprane.pl/img/logo.jpg">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:image:width" content="1024">
+        <meta property="og:image:height" content="1024">
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://mobilnieuprane.pl/"/>
+        <meta property="og:title" content="MOBLINIE_UPRANE" />
+        <meta property="og:description" content="Zadzwoń i zarezerwuj termin"/>
         <title>Mobilnie_uprane</title>
         <!-- Favicon-->
         <link rel='icon' type='imgae/png' href='img/favicon-32x32.png' />
@@ -44,7 +53,13 @@
             <div class="container">
                 <div class="masthead-subheading">Witaj w świecie czystych tapicerek</div>
                 <div class="masthead-heading text-uppercase">Czystość & świeżość</div>
+                <div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">dowiedz się więcej</a>
+                </div>
+                <div>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger mt-3" href="tel:512790566"><span class="tel-font">512 790 566</span></a>
+                </div>
+
 
             </div>
         </header>
@@ -130,7 +145,7 @@
                 <div class="row text-center">
                     <div class="col-md-4">
                         <div>
-                            <img class="img-fluid pb-4" src="img/dywan.webp" alt="" />
+                            <img class="mb-4 rond" src="img/dywan.webp" alt="" />
                         </div>
                         <div class="card mb-4 box-shadow">
                             <div class="card-header card-header-bg">
@@ -146,7 +161,7 @@
                     </div>
                     <div class="col-md-4">
                         <div>
-                            <img class="img-fluid pb-4" src="img/car.webp" alt="" />
+                            <img class="mb-4 rond" src="img/car.webp" alt="" />
                         </div>
                         <div class="card mb-4 box-shadow">
                             <div class="card-header card-header-bg">
@@ -162,7 +177,7 @@
                     </div>
                     <div class="col-md-4">
                         <div>
-                            <img class="img-fluid pb-4" src="img/meble.webp" alt="" />
+                            <img class="mb-4 rond" src="img/meble.webp" alt="" />
                         </div>
                         <div class="card mb-4 box-shadow">
                             <div class="card-header card-header-bg">
@@ -182,8 +197,8 @@
                 </div>
             </div>
         </section>
-        <section class="page-section" id="kontakt">
-            <div class="container">
+        <section class="page-section mt-0 pt-0" id="kontakt">
+            <div class="container ">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <img class="img-fluid pb-4" src="img/logo_kontakt.webp" alt="" />
@@ -192,14 +207,24 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                    <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+                        <i href="tel:512790566" class="fas fa-phone fa-3x mb-3 text-muted"></i>
+                        <div ><a class='tel-font-2' href="tel:512790566">> 512 790 566 <</a></div>
                     </div>
-                    <div class="col-lg-4 mr-auto text-center">
+                    <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+                        <a class="d-block tel-font-2" href="mailto:hustlaclaus@gmail.com">hustlaclaus@gmail.com</a>
+                    </div>
+                    <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
+                        <i class="fab fa-instagram-square fa-3x mb-3 text-muted"></i>
+                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
+                        <a class="d-block tel-font-2" href="">INSTAGRAM</a>
+                    </div>
+                    <div class="col-lg-3 mr-auto text-center">
+                        <i class="fab fa-facebook-square fa-3x mb-3 text-muted"></i>
+                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
+                        <a class="d-block tel-font-2" href="">FACEBOOK</a>
                     </div>
                 </div>
             </div>
