--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         <!--FACEBOOK-->
         <meta property="og:image" content="http://mobilnieuprane.pl/img/logo.jpg">
         <meta property="og:image:type" content="image/png">
-        <meta property="og:image:width" content="1024">
-        <meta property="og:image:height" content="1024">
+        <meta property="og:image:width" content="659">
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://mobilnieuprane.pl/"/>
         <meta property="og:title" content="MOBLINIE_UPRANE" />
@@ -26,6 +25,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/style.css" rel="stylesheet" />
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -211,20 +211,19 @@
                         <i href="tel:512790566" class="fas fa-phone fa-3x mb-3 text-muted"></i>
                         <div ><a class='tel-font-2' href="tel:512790566">> 512 790 566 <</a></div>
                     </div>
-                    <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
+                    <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0 mail-font-2">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block tel-font-2" href="mailto:hustlaclaus@gmail.com">hustlaclaus@gmail.com</a>
+                        <a class="d-block mail-font-2" href="mailto:hustlaclaus@gmail.com">mobilnieuprane@gmail.com</a>
                     </div>
                     <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
-                        <i class="fab fa-instagram-square fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block tel-font-2" href="">INSTAGRAM</a>
+                        <a class="bg-color-i" href="https://instagram.com/mobilnie_uprane?igshid=1e11d9zybziwh"><i class="fab fa-instagram" ></i></a>
                     </div>
                     <div class="col-lg-3 mr-auto text-center">
-                        <i class="fab fa-facebook-square fa-3x mb-3 text-muted"></i>
+                        
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block tel-font-2" href="">FACEBOOK</a>
+                        <a class="bg-color-f" href="https://www.facebook.com/mobilnie.uprane.1"><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
